# dolphin

./: CMakeLists.txt  Readme.md
CMake/: EmscriptenLibraryLinking.cmake
Source/: CMakeLists.txt
Source/Core/: DolphinLib.props
Source/Core/AudioCommon/: AudioCommon.cpp  CMakeLists.txt  CubebStream.h  OpenALStream.cpp  OpenALStream.h
Source/Core/Common/: Analytics.cpp  CMakeLists.txt  CPUDetect.h  CommonFuncs.cpp  FileUtil.cpp  HttpRequest.cpp  MemArena.cpp  MemoryUtil.cpp  MsgHandler.cpp  Thread.cpp  Timer.cpp  VarInt.h  WasmCPUDetect.cpp  WasmEnv.h  WasmEnv.js  WebAdapter.h  WebAdapter.js  WindowSystemInfo.h
Source/Core/Common/GL/: GLContext.cpp
Source/Core/Common/GL/GLExtensions/: GLExtensions.h  GLExtensions_Static.cpp  gl_emscripten.cpp  gl_emscripten.h
Source/Core/Common/GL/GLInterface/: WebGLEmscripten.cpp  WebGLEmscripten.h
Source/Core/Common/Logging/: ConsoleListenerEmscripten.cpp  LogManager.cpp
Source/Core/Core/: BootManager.cpp  CMakeLists.txt  DolphinAnalytics.cpp  MachineContext.h  MemTools.cpp
Source/Core/Core/HW/EXI/: EXI_DeviceMic.h
Source/Core/Core/IOS/Network/: Socket.h
Source/Core/Core/PowerPC/: JitInterface.cpp  PowerPC.h
Source/Core/Core/PowerPC/JitCommon/: JitCache.h
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp  Platform.h  PlatformWeb.cpp
Source/Core/InputCommon/: CMakeLists.txt  GCAdapter_Null.cpp
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp  ControllerInterface.h
Source/Core/InputCommon/ControllerInterface/HTML5/: HTML5.cpp  HTML5.h  HTML5Gamepad.cpp  HTML5Gamepad.h  HTML5KeyboardMouse.cpp  HTML5KeyboardMouse.h  HTML5NativeInput.h  HTML5NativeInput.js
Source/Core/VideoBackends/OGL/: OGLMain.cpp  OGLRender.cpp
Source/Core/VideoBackends/Software/: SWOGLWindow.cpp
Source/Core/VideoCommon/: DriverDetails.cpp  DriverDetails.h  VertexLoaderBase.cpp
Source/UnitTests/: CMakeLists.txt
Source/UnitTests/Common/: CommonFuncsTest.cpp
